# rishat_test_task

./: Dockerfile  docker-compose.yml  entrypoint.sh  payments.json  pyproject.toml  readme.md
RishatTestTask/: manage.py
RishatTestTask/RishatTestTask/: asgi.py  settings.py  wsgi.py
RishatTestTask/payments/: admin.py  models.py  urls.py  views.py
RishatTestTask/payments/migrations/: 0001_initial.py
RishatTestTask/payments/templates/payments/: create_order.html  item_detail.html
